--- a/giao dien/index.html
+++ b/giao dien/index.html
@@ -20,5 +20,7 @@
       <li><a class="fa fa-shopping-bog" href=""></a></li>
     </div>
   </header>
-  <body></body>
+  <body>
+    <h1>Hello</h1>
+  </body>
 </html>
